--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ h1{
 }
 section{
     display: flex;
+    margin-bottom: 120px;
 }
 .half-width{
     width:50% ;
@@ -29,4 +30,10 @@ section{
 .Top-Baner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.to-part{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
 }
